globus-gsi-sysconfig (8.1-1+gt6.@distro@) @distro@; urgency=low

  * fix typo in windows function name

 -- Globus Toolkit <support@globus.org>  Wed, 24 Jan 2018 21:24:59 -0600

globus-gsi-sysconfig (8.0-1+gt6.@distro@) @distro@; urgency=low

  * Add cert and key checks based on different uid

 -- Globus Toolkit <support@globus.org>  Wed, 01 Nov 2017 13:49:52 +0000

globus-gsi-sysconfig (7.1-1+gt6.@distro@) @distro@; urgency=low

  * Enable c99 compiler syntax

 -- Globus Toolkit <support@globus.org>  Wed, 06 Sep 2017 13:38:40 -0400

globus-gsi-sysconfig (7.0-1+gt6.@distro@) @distro@; urgency=low

  * Add SNI vhost cred dir support

 -- Globus Toolkit <support@globus.org>  Tue, 05 Sep 2017 14:33:22 -0400

globus-gsi-sysconfig (6.11-1+gt6.@distro@) @distro@; urgency=low

  * Update for el.5 openssl101e

 -- Globus Toolkit <support@globus.org>  Thu, 08 Sep 2016 15:18:44 -0400

globus-gsi-sysconfig (6.10-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 15:08:47 -0400

globus-gsi-sysconfig (6.9-1+gt6.@distro@) @distro@; urgency=low

  * Remove @} without matching @{

 -- Globus Toolkit <support@globus.org>  Wed, 25 Nov 2015 16:16:03 -0500

globus-gsi-sysconfig (6.8-1+gt6.@distro@) @distro@; urgency=low

  * Include more manpages for API
  * Doxygen markup fixes
  * Fix typos and clarify some documentation
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 14:10:32 -0400

globus-gsi-sysconfig (6.7-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-gsi-sysconfig (6.6-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-gsi-sysconfig (6.6-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages
