@@ -1,179 +1,46 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
-DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
-DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/default.mk
 
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-MAKEFLAGS += -j$(NUMJOBS)
-endif
-
-include /usr/share/quilt/quilt.make
+# see FEATURE AREAS in dpkg-buildflags(1)
+#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 name = globus-gsi-sysconfig
 _name = globus_gsi_sysconfig
 version = 8.1
 soname = 1
-
-INSTALLDIR = $(CURDIR)/debian/tmp
-DEB_HOST_MULTIARCH ?= $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
-
 _prefix = /usr
 _bindir = $(_prefix)/bin
 _sbindir = $(_prefix)/sbin
+_sysconfdir = /etc
 _includedir = $(_prefix)/include
 _libdir = $(_prefix)/lib/$(DEB_HOST_MULTIARCH)
 _datadir = $(_prefix)/share
 _mandir = $(_datadir)/man
 _docdir = $(_datadir)/doc
 
-DEB_BUILD_ARCH_CPU ?= $(shell dpkg-architecture -qDEB_BUILD_ARCH_CPU)
+override_dh_auto_configure:
+	dh_auto_configure -- \
+	    --sysconfdir=$(_sysconfdir) \
+	    --enable-silent-rules \
+	    --docdir='$(_docdir)/lib$(name)-dev' \
+	    --includedir='$(_includedir)/globus' \
+	    --datadir='$(_datadir)/globus' \
+	    --libexecdir='$(_datadir)/globus' \
+	    --disable-static \
+	    --enable-doxygen
 
-sed: sed-stamp
-	:
+override_dh_auto_install:
+	mkdir -p debian/tmp/etc/grid-security/certificates
+	dh_auto_install
 
-sed-stamp: $(QUILT_STAMPFN)
-	dh_testdir
+override_dh_strip:
+	dh_strip --dbg-package=libglobus-gsi-sysconfig-dbg
 
-	touch $@
+%:
+	dh $@ --with autotools-dev
 
-unsed: cleanup
-	dh_testdir
-
-	rm -f sed-stamp
-
-configure: configure-stamp
-	:
-
-configure-stamp: sed-stamp
-	dh_testdir
-
-	autoreconf -if
-
-	for f in config.sub config.guess ; do \
-	  if [ -e /usr/share/misc/$$f -a ! -e $$f.dist ] ; then \
-	    mv build-aux/$$f $$f.dist ; \
-	    cp -f /usr/share/misc/$$f build-aux/$$f ; \
-	  fi ; \
-	done
-
-
-	./configure \
- 	   --host=$(DEB_HOST_GNU_TYPE) \
-	   --build=$(DEB_BUILD_GNU_TYPE) \
-	   --prefix=$(_prefix) \
-	   --docdir='$(_docdir)/lib$(name)-dev' \
-	   --includedir='$(_includedir)/globus' \
-	   --datadir='$(_datadir)/globus' \
-	   --libdir='$(_libdir)' \
-	   --libexecdir='$(_datadir)/globus' \
-	   --disable-static \
-	   --enable-doxygen
-
-	touch $@
-
-build: build-stamp
-	:
-
-build-stamp: configure-stamp
-	dh_testdir
-
-	$(MAKE)
-ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
-	$(MAKE) check
-endif
-
-	touch $@
-
-unpatch: unsed
-
-clean: unpatch
-	:
-
-cleanup:
-	dh_testdir
-	dh_testroot
-
-	if [ -r Makefile ] ; then $(MAKE) distclean ; fi
-
-
-	# Remove autogenerated files
-
-	for f in config.sub config.guess ; do \
-	  if [ -e $$f.dist ] ; then \
-	    mv -f $$f.dist build-aux/$$f ; \
-	  fi ; \
-	done
-	# Remove autogenerated files
-	rm -f aclocal.m4
-	rm -f configure
-	rm -f config.guess
-	rm -f config.sub
-	rm -f ltmain.sh
-	rm -f mkinstalldirs
-
-	rm -f doxygen/doc
-	rm -rf autom4te.cache
-
-	find . -name Makefile.in -exec rm {} ';'
-
-	rm -f build-stamp configure-stamp
-
-	dh_clean debian/*.install
-
-install: build-stamp
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-
-	$(MAKE) install DESTDIR=$(INSTALLDIR)
-
-	# Remove libtool archives (.la files)
-	find $(INSTALLDIR)$(_libdir) -name 'lib*.la' -exec rm -v '{}' \;
-	# Remove doxygen installdox if present
-	rm -f debian/tmp$(_docdir)/lib$(name)-dev/html/installdox
-	# Generate package filelists
-	ls -1 \
-	  debian/tmp$(_libdir)/libglobus*.so.* \
-	  debian/tmp$(_docdir)/lib$(name)-dev/GLOBUS_LICENSE \
-	  > debian/lib$(name)$(soname).install
-	ls -1 \
-	  debian/tmp$(_docdir)/lib$(name)-dev/html/*.* \
-	  debian/tmp$(_docdir)/lib$(name)-dev/html/*/* \
-	  debian/tmp$(_mandir)/man3/[Gg][Ll][Oo][Bb][Uu][Ss]*.3 \
-	  > debian/lib$(name)-doc.install
-
-	ls -1 debian/tmp$(_includedir)/globus/*.h \
-	  debian/tmp$(_libdir)/*.so \
-	  debian/tmp$(_libdir)/pkgconfig/*.pc \
-	  > debian/lib$(name)-dev.install
-
-binary-indep:
-	:
-
-binary-arch: install
-	dh_testdir
-	dh_testroot
-	mkdir -p debian/lib$(name)-doc$(_docdir)
-	ln -s lib$(name)-dev debian/lib$(name)-doc$(_docdir)/lib$(name)-doc
-	dh_installchangelogs
-	dh_installdocs
-	dh_install --fail-missing
-	dh_installman
-	dh_link
-	dh_strip --dbg-package=lib$(name)-dbg
-	dh_compress -X .tag
-	dh_fixperms
-	dh_perl
-	dh_makeshlibs
-	dh_installdeb
-	dh_shlibdeps -l debian/lib$(name)$(soname)/usr/lib
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary: binary-indep binary-arch
-	:
-
-.PHONY: build clean binary-indep binary-arch binary install configure
+.PHONY: override_dh_auto_configure override_dh_strip override_dh_auto_install
